# ebicsclient

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: 01-protocol-and-formats.md  02-licensing-strategy.md  03-library-landscape.md  04-implementation-plan.md  05-zkb-onboarding.md  06-engineering-conventions.md  07-handshake-testing.md  08-parity-and-xsd-findings.md  09-zkb-test-platform-settings.md  10-btf-order-types.md  11-certificate-profiles.md  12-verification-ledger.md
examples/: zkb_handshake.py
src/ebicsclient/: __init__.py  certificates.py  client.py  crypto.py  errors.py  keys.py  letter.py  models.py  transport.py
src/ebicsclient/formats/: __init__.py  camt.py  camt052.py  camt053.py  camt054.py  container.py  pain002.py
src/ebicsclient/protocol/: __init__.py  h005.py
tests/: crypto_helpers.py  test_c14n_vectors.py  test_camt052_054.py  test_camt053.py  test_certificates.py  test_client.py  test_container.py  test_crypto.py  test_errors.py  test_h005.py  test_input_validation.py  test_keys.py  test_letter.py  test_pain002.py  test_php_parity.py  test_schema_validation.py  test_spec_letter_vectors.py  test_transport.py
tests/data/: camt052_zkb_sample.xml  camt053_zkb_sample.xml  camt054_collective_zkb_sample.xml  camt054_credit_zkb_sample.xml  camt054_debit_zkb_sample.xml  ebics30_spec_letter_certificates.json  htd_zkb_sample.xml  pain002_accp.xml  pain002_actc.xml  pain002_part.xml  pain002_rjct.xml
tests/fixtures/parity/: hia.xml  hpb.xml  ini.xml  meta.json
tools/: fetch-schemas.py
tools/php-parity/: README.md  composer.json  generate.php
